--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 .site-header img{
-  height: 200px;
+  height: 159px;
   width: 204px;
 }
 
@@ -717,4 +717,32 @@ footer p {
       .cont {
         display: block;
     }
+
+    .site-header img{
+      height: 159px;
+      width: 180px;
+      margin-bottom: 0.2rem;
+    }
+
+    .hero-banner {
+      background: url('https://images.unsplash.com/photo-1657711772204-c90a591ad1e4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') center/cover no-repeat;
+      color: white;
+      text-align: center;
+      padding: 2rem 0.9rem;
+      margin-top: 4px;
+    }
+
+    .hero-content h1 {
+      font-size: 2rem;
+      margin-bottom: 4rem;
+    }
+    
+    .hero-content p {
+      font-size: 1.5rem;
+      margin-bottom: 4.5rem;
+    }
+
+  
+
+    
 }
