--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,24 @@ body {
     font-weight: bold;
 }
 
+/* ✅ RESPONSIVE */
+@media screen and (max-width: 1024px) {
+  .cont {
+    grid-template-columns: 1fr 1fr;
+  }
+}
 
+@media screen and (max-width: 768px) {
+  .cont {
+    grid-template-columns: 1fr;
+  }
+
+  .curent,
+  .forecast {
+    width: 88%;
+    padding: 20px;
+  }
+}
 
   
 
