--- a/css/style.css
+++ b/css/style.css
@@ -325,13 +325,15 @@ body {
 }
 
 /* ✅ RESPONSIVE */
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
+  
+} */
+
+@media screen and (max-width: 768px) {
+
   .cont {
     grid-template-columns: 1fr 1fr;
   }
-}
-
-@media screen and (max-width: 768px) {
   .cont {
     grid-template-columns: 1fr;
   }
