--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ body {
 }
 
 .mobile-nav a {
-  padding: 0.5rem 15px;
+  /* padding: 0.5rem; */
   text-decoration: none;
   color: #333;
   background-color: aliceblue;
